ui/webui/resources/wasm/vendor/zerocopy/tests/ui-nightly/include_value_wrong_size.stderr
error[E0080]: transmuting from 4-byte type to 8-byte type: `[u8; 4]` -> `u64`
  --> tests/ui-nightly/include_value_wrong_size.rs:15:25
   |
15 | const WRONG_SIZE: u64 = include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `WRONG_SIZE` failed here
   |
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `include_value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-nightly/include_value_wrong_size.rs:15:25
   |
15 | const WRONG_SIZE: u64 = include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 4]` (32 bits)
   = note: target type: `u64` (64 bits)
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `include_value` (in Nightly builds, run with -Z macro-backtrace for more info)
